# QUBOBrute

./: .gitignore  LICENSE  README.md  condarequirements.txt  pyproject.toml  requirements.txt  setup.py
examples/: linalg.py  usage.ipynb
qubobrute/: __init__.py  core.py  simulated_annealing.py
tests/: profiling.py  test_basic.py
